--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "cakes app to do CRUD operations",
   "author": "Muthu Sakthivel",
-  "license": "",
+  "license": "MIT",
   "scripts": {
     "prebuild": "npm-run-all clean-dist test lint",
     "build": "npm run start-prod",
@@ -19,6 +19,10 @@
   "devDependencies": {
     "@babel/cli": "7.1.0",
     "@babel/core": "7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-async-to-generator": "^7.1.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "7.1.0",
     "@babel/preset-react": "7.0.0",
     "babel-core": "7.0.0-bridge.0",
@@ -54,9 +58,19 @@
     "webpack-merge": "4.1.4"
   },
   "dependencies": {
+    "@babel/runtime": "^7.1.2",
+    "axios": "^0.18.0",
+    "bootstrap": "v3",
     "prop-types": "15.6.2",
     "react": "16.5.2",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "16.5.2",
-    "react-router-dom": "4.3.1"
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "4.3.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.3",
+    "redux-thunk": "^2.3.0"
   }
 }
