--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "open": "0.0.5",
     "react-hot-loader": "4.3.11",
     "react-test-renderer": "16.6.0",
+    "redux-mock-store": "^1.5.3",
     "rimraf": "2.6.2",
     "style-loader": "0.23.0",
     "webpack": "4.19.1",
