--- a/package.json
+++ b/package.json
@@ -44,13 +44,17 @@
     "identity-obj-proxy": "3.0.0",
     "image-webpack-loader": "4.3.1",
     "jest": "23.6.0",
+    "mini-css-extract-plugin": "^0.4.4",
     "npm-run-all": "^4.1.3",
     "open": "0.0.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "react-hot-loader": "4.3.11",
     "react-test-renderer": "16.6.0",
     "redux-mock-store": "^1.5.3",
     "rimraf": "2.6.2",
+    "sass-loader": "^7.1.0",
     "style-loader": "0.23.0",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "4.19.1",
     "webpack-cli": "3.1.0",
     "webpack-dev-middleware": "3.3.0",
